Transaction view list works

--- a/JavaFX/assets/userPane.fxml
+++ b/JavaFX/assets/userPane.fxml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -16,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" styleClass="background" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerList">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerList">
    <children>
-      <SplitPane dividerPositions="0.38220551378446116" mouseTransparent="true" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.38220551378446116" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -31,7 +27,7 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background" stylesheets="@DarkTheme.css">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
                <children>
                   <Label layoutY="6.0" styleClass="label-header" text="User Details" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
@@ -69,17 +65,17 @@
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="firstNameLabel" styleClass="label-bright" text="undefined" GridPane.columnIndex="1">
+                        <Label fx:id="firstNameLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lastNameLabel" styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Label fx:id="lastNameLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="phoneLabel" styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Label fx:id="phoneLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <font>
                               <Font size="21.0" />
                            </font>
@@ -94,19 +90,19 @@
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="emailLabel" styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Label fx:id="emailLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label fx:id="balanceLabel" styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <Label fx:id="balanceLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
                      </children>
                   </GridPane>
-                  <Button fx:id="setTransactionListView" layoutX="351.0" layoutY="452.0" mnemonicParsing="false" text="Transaccions" textFill="WHITE" />
+                  <Button fx:id="transactionButton" layoutX="380.0" layoutY="453.0" mnemonicParsing="false" onAction="#setTransactionListView" prefHeight="31.0" prefWidth="96.0" text="Transaccions" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="40.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
