--- a/JavaFX/bin/assets/userPane.fxml
+++ b/JavaFX/bin/assets/userPane.fxml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" styleClass="background" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerList">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerList">
    <children>
-      <SplitPane dividerPositions="0.38220551378446116" mouseTransparent="true" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.38220551378446116" prefHeight="500.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -32,14 +27,14 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background" stylesheets="@DarkTheme.css">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
                <children>
                   <Label layoutY="6.0" styleClass="label-header" text="User Details" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="42.0" layoutY="65.0" prefHeight="340.0" prefWidth="407.0" AnchorPane.bottomAnchor="93.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="41.0" AnchorPane.topAnchor="65.0">
+                  <GridPane layoutX="42.0" layoutY="79.0" prefHeight="340.0" prefWidth="407.0" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="41.0" AnchorPane.topAnchor="79.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="127.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="280.0" />
@@ -48,6 +43,8 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label prefHeight="31.0" prefWidth="115.0" styleClass="label-bright" text="First Name:">
@@ -68,23 +65,44 @@
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label styleClass="label-bright" text="undefined" GridPane.columnIndex="1">
+                        <Label fx:id="firstNameLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Label fx:id="lastNameLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
-                        <Label styleClass="label-bright" text="undefined" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Label fx:id="phoneLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="31.0" prefWidth="115.0" styleClass="label-bright" text="Saldo:" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="31.0" prefWidth="115.0" styleClass="label-bright" text="Email:" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="emailLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="balanceLabel" styleClass="label-bright" text="nul" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <font>
                               <Font size="21.0" />
                            </font>
                         </Label>
                      </children>
                   </GridPane>
+                  <Button fx:id="transactionButton" layoutX="380.0" layoutY="453.0" mnemonicParsing="false" onAction="#setTransactionListView" prefHeight="31.0" prefWidth="96.0" text="Transaccions" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="40.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
