--- a/JavaFX/assets/userPane.fxml
+++ b/JavaFX/assets/userPane.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -18,13 +19,22 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="userTable" prefHeight="498.0" prefWidth="275.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="userTable" prefHeight="381.0" prefWidth="302.0" AnchorPane.bottomAnchor="117.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="firstNameColumn" prefWidth="83.0" text="Nom" />
                       <TableColumn fx:id="lastNameColumn" prefWidth="112.0" text="Cognom" />
                         <TableColumn fx:id="phoneColumn" prefWidth="105.0" text="Telefon" />
                     </columns>
                   </TableView>
+                  <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Estat" />
+                  <Button layoutX="14.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Saldos" />
+                  <Button layoutX="14.0" layoutY="466.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="N. Transaccions" />
+                  <ChoiceBox layoutX="138.0" layoutY="416.0" prefWidth="150.0" />
+                  <Label layoutX="14.0" layoutY="390.0" prefHeight="17.0" prefWidth="96.0" text="Filtres">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
