--- a/JavaFX/bin/assets/userPane.fxml
+++ b/JavaFX/bin/assets/userPane.fxml
@@ -18,13 +18,16 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="userTable" prefHeight="498.0" prefWidth="275.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="userTable" prefHeight="381.0" prefWidth="302.0" AnchorPane.bottomAnchor="117.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="firstNameColumn" prefWidth="83.0" text="Nom" />
                       <TableColumn fx:id="lastNameColumn" prefWidth="112.0" text="Cognom" />
                         <TableColumn fx:id="phoneColumn" prefWidth="105.0" text="Telefon" />
                     </columns>
                   </TableView>
+                  <Button layoutX="14.0" layoutY="391.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Button" />
+                  <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Button" />
+                  <Button layoutX="14.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Button" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
