--- a/JavaFX/assets/userPane.fxml
+++ b/JavaFX/assets/userPane.fxml
@@ -26,15 +26,16 @@
                         <TableColumn fx:id="phoneColumn" prefWidth="105.0" text="Telefon" />
                     </columns>
                   </TableView>
-                  <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Estat" />
-                  <Button layoutX="14.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Saldos" />
-                  <Button layoutX="14.0" layoutY="466.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="N. Transaccions" />
-                  <ChoiceBox layoutX="138.0" layoutY="416.0" prefWidth="150.0" />
+                  <Button fx:id="estatButton" layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Estat" />
+                  <Button fx:id="saldosButton" layoutX="14.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Saldos" />
+                  <Button fx:id="nTransaccionsButton" layoutX="14.0" layoutY="466.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="N. Transaccions" />
+                  <ChoiceBox fx:id="choiceFiltres" layoutX="138.0" layoutY="416.0" prefWidth="150.0" />
                   <Label layoutX="14.0" layoutY="390.0" prefHeight="17.0" prefWidth="96.0" text="Filtres">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <Button fx:id="endavant" layoutX="173.0" layoutY="454.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Endavant" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
