--- a/JavaFX/assets/userPane.fxml
+++ b/JavaFX/assets/userPane.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -36,6 +37,9 @@
                      </font>
                   </Label>
                   <Button fx:id="endavant" layoutX="173.0" layoutY="454.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Endavant" />
+                  <Label fx:id="labelMinMax" layoutX="203.0" layoutY="395.0" text="&lt;-&gt;" visible="false" />
+                  <TextField fx:id="numMin" layoutX="159.0" layoutY="391.0" prefHeight="25.0" prefWidth="29.0" visible="false" />
+                  <TextField fx:id="numMax" layoutX="240.0" layoutY="391.0" prefHeight="25.0" prefWidth="29.0" visible="false" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #A2EEF5;">
