--- a/JavaFX/assets/userPane.fxml
+++ b/JavaFX/assets/userPane.fxml
@@ -117,7 +117,8 @@
                         </Label>
                      </children>
                   </GridPane>
-                  <Button fx:id="transactionButton" layoutX="380.0" layoutY="453.0" mnemonicParsing="false" onAction="#setTransactionListView" prefHeight="31.0" prefWidth="96.0" text="Transaccions" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="40.0" />
+                  <Button fx:id="transactionButton" layoutX="380.0" layoutY="453.0" mnemonicParsing="false" onAction="#setTransactionListView" prefHeight="31.0" prefWidth="96.0" text="Transaccions" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+                  <Button fx:id="verificationViewButton" layoutX="246.0" layoutY="453.0" mnemonicParsing="false" onAction="#setVerificarionView" prefHeight="31.0" prefWidth="123.0" text="Detalls Verificació" />
                </children></AnchorPane>
         </items>
       </SplitPane>
